# Voxels

./: CMakeLists.txt  README.md
include/cyrex_voxels/gfx/: drawing.h  shader.h  vertex_array.h  vertex_buffer.h
include/cyrex_voxels/rend/: camera.h
include/cyrex_voxels/vox/: blocky.h  cache.h  convert.h  marching.h  pipeline.h  ray.h  samplers.h  transform.h  voxel.h
src/: main.cpp
src/gfx/: drawing.cpp  drawing.h  index_buffer.cpp  index_buffer.h  shader.cpp  shader.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h
src/rend/: camera.cpp  camera.h
src/vox/: blocky.cpp  blocky.h  chunk.h  marching.cpp  ray.h  voxel.h
